<resources>
    <string name="app_name">GolfStat</string>
    <string name="ok">Ok</string>
    <string name="no">Ne</string>
    <string name="cancel">Zrušit</string>
    <string name="ApplicationTerminate_string_dialogMessage">Opravdu chcete ukončit tuto aplikaci?</string>
    <string name="MainMenu_string_newGame">Nová hra</string>
    <string name="MainMenu_string_savedGames">Uložené hry</string>
    <string name="MainMenu_string_statistics">Statistiky</string>
    <string name="MainMenu_string_settings">Nastavení</string>
    <string name="MainMenu_string_title">Hlavní menu</string>
    <string name="SelectResort_string_title">Výběr resortu</string>
    <string name="NewGameTerminate_string_dialogMessage">Opravdu chcete ukončit tvorbu nové hry?</string>
    <string name="ActivateGps_string_dialogMessage">Chcete aktivovat GPS pro využití pokročilých možností určování Vaší polohy touto aplikací?</string>
    <string name="ActivateGps_string_settings">Nastavení</string>
    <string name="ActivateGps_string_dialogCheckBox">Již nikdy nezobrazovat</string>
    <string name="SelectResortAdapter_string_arrea">kraj</string>
    <string name="SelectResort_string_search">zadejte název resortu...</string>
    <string name="SelectCourse_string_title">Výběr hriště</string>
    <string name="SelectCourse_string_Course">Výběr hřište</string>
    <string name="SelectCourse_string_Tee">Výběr odpaliště</string>
    <string name="SelectCourse_string_CreateGame">Vytvořit hru</string>
    <string name="CreatePlayer_string_title">Tvorba profilu</string>
    <string name="CreatePlayer_string_name">Jméno</string>
    <string name="CreatePlayer_string_surname">Příjmení</string>
    <string name="CreatePlayer_string_nickname">Přezdívka</string>
    <string name="CreatePlayer_string_handicap">Hendikep</string>
    <string name="CreatePlayer_string_createPlayer">Hotovo</string>
    <string name="NonValidPlayerToast_string_toast">Byly zadány nespravné údaje.</string>
    <string name="CreatePlayerTerminate_string_dialog">Vyplnění údajů o hráči je nutné pro spuštení.</string>
    <string name="CreatePlayerTerminate_string_terminate">Ukončit Aplikaci</string>
    <string name="EditBag_string_title">Úprava bagu</string>
    <string name="EditBag_string_done">Hotovo</string>
    <string name="EditBag_string_addClub">Přidat hůl</string>
    <string name="AddClub_string_title">Vytvoř hůl</string>
    <string name="NonValidClubToast_string_toast">Byly zadány nevalidní hodnoty.</string>
    <string name="AddClub_string_name">Název</string>
    <string name="AddClub_string_model">Model</string>
    <string name="AddClub_string_ssl">Standardní délka rány</string>
    <string name="AddClub_string_done">Přidat hůl</string>
    <string name="RemoveClub_string_title">Opravdu chcete odstranit hůl:</string>
    <string name="ClubRemovedSuccessfully_string_toast">Hůl byla odstraněna úspěšně.</string>
    <string name="EditClub_string_title">Uprav hůl</string>
    <string name="EditClub_string_done">Upravit hůl</string>
    <string name="ClubAddedSuccessfully_string_toast">Hůl úspěšně vytvořena.</string>
    <string name="ClubEditedSuccessfully_string_toast">Hůl úspěšně upravena.</string>
    <string name="Settings_string_title">Nastavení</string>
    <string name="Settings_string_editProfile">Upravit profil</string>
    <string name="Settings_string_editBag">Úprava bagu</string>
    <string name="CreatePlayer_string_titleEdit">Úprava profilu</string>
    <string name="SelectPlaymate_string_title">Výběr spoluhráčů</string>
    <string name="SelectPlaymate_string_createGame">Vytvoř hru</string>
    <string name="SelectPlaymate_string_findNickname">vyhledat přezdívku ...</string>
    <string name="AddPlayer_string_AddPlayer">Přidej hráče</string>
    <string name="NonValidPlaymate_string_toast">Nelze odebrat hlavní profil.</string>
    <string name="GameCreatedSuccessfully_string_toast">Hra vytvořena úspěšně</string>
    <string name="SelectHole_string_title">Výběr jamky</string>
    <string name="SelectHoleAdapter_string_par">Par:</string>
    <string name="SelectHoleAdapter_string_name">Název:</string>
    <string name="SelectHoleAdapter_string_course">Hřiště:</string>
    <string name="GameTerminate_string_dialogMessage">Opravdu chcete opustit aktuální hru?</string>
    <string name="GameOnHole_string_title">"Hra na jamce"</string>
    <string name="GameOnHoleMenu_string_prevHole">Předchozí jamka</string>
    <string name="GameOnHoleMenu_string_nextHole">Následující jamka</string>
    <string name="GameOnHole_string_holeNumber">Jamka číslo</string>
    <string name="GameOnHole_string_par">Par/Os. par</string>
    <string name="GameOnHole_string_handicap">Handicap</string>
    <string name="GameOnHole_string_holeLength">Délka jamky</string>
    <string name="SelectHoleAdapter_string_lenght">Délka: </string>
    <string name="GameOnHoleMenu_string_measuring">Měření</string>
    <string name="GameOnHoleMenu_string_captureShot">Záznam rány</string>
    <string name="GameOnHoleMenu_string_holeScore">Skóre jamky</string>
    <string name="GameOnHoleMenu_string_currentScore">Průběžné skóre</string>
    <string name="GameOnHole_string_from">Odkud</string>
    <string name="GameOnHole_string_to">Kam</string>
    <string name="GameOnHole_string_notSet">Nezadáno</string>
    <string name="PointSelectionMethod_string_byHand">Ruční zadání polohy</string>
    <string name="PointSelectionMethod_string_Gps">Aktuální poloha GPS</string>
    <string name="PointSelectionMethod_string_title">Vyberte způsob zadání bodu.</string>
    <string name="GameOnHole_string_setByUser">Zadáno</string>
    <string name="PointSelectionMethod_string_holePoint">Bod jamky</string>
    <string name="PointSelectionHolePoints_string_title">Zvolte bod jamky.</string>
    <string name="HoleScore_string_title">Skóre jamky</string>
    <string name="HoleScore_string_hole">Jamka</string>
    <string name="HoleScore_string_player">Hráč</string>
    <string name="HoleScore_string_score">Skóre</string>
    <string name="HoleScore_string_put">Paty</string>
    <string name="HoleScore_string_shots">Rány</string>
    <string name="HoleScore_string_penaltyShots">Trestné rány</string>
    <string name="HoleScore_string_saveScore">Ulož skóre</string>
    <string name="HoleScoreHoleList_string_title">Zvolte jamku.</string>
    <string name="HoleScorePlayerList_string_title">Zvolte hráče.</string>
    <string name="SelectCourse_string_selectPlaymate">Výběr spoluhráčů</string>
    <string name="ToManyPlaymates_string_toast">4 je maxilální počet hráčů</string>
    <string name="AddPlayer_string_title">Tvorba hráče.</string>
    <string name="UpdateScore_string_title">Opravdu chcete uložit upravené skóre?</string>
    <string name="ScoreSaved_string_toast">Skóre úspěšně uloženo.</string>
    <string name="ScoreUpdated_string_toast">Skóre úspěšně aktualizováno.</string>
    <string name="ScoreNotSaved_string_title">Skóre jamky nebylo uloženo!</string>
    <string name="ScoreNotSaved_string_save">Uložit</string>
    <string name="ScoreNotSaved_string_noSave">Neukládat</string>
    <string name="GameOnHole_string_score">Skóre / Stable</string>
    <string name="GameOnHole_string_puts">Paty</string>
    <string name="GameOnHole_string_penaltyShots">Trestné rány</string>
    <string name="SelectHoleAdapter_string_hcp">Hcp:</string>
    <string name="SelectHoleAdapter_string_noScore">nezahráno</string>
    <string name="SelectHoleAdapter_string_hasScore">zahráno</string>
    <string name="GameOnHole_string_shotNumber">Rána číslo</string>
    <string name="GameOnHole_string_club">Hůl</string>
    <string name="GameOnHole_string_ballArea">Poloha míče</string>
    <string name="GameOnHole_string_shotSpecification">Specifikace</string>
    <string name="AreaType_string_fairway">Fervej</string>
    <string name="AreaType_string_semirough">Semiraf</string>
    <string name="AreaType_string_rough">Raf</string>
    <string name="AreaType_string_bunker">Bunker</string>
    <string name="AreaType_string_green">Green</string>
    <string name="AreaType_string_water">Voda</string>
    <string name="AreaType_string_biozone">Biozóna</string>
    <string name="AreaType_string_out">Out</string>
    <string name="ShotSpecification_string_straight">Rovná</string>
    <string name="ShotSpecification_string_slajz">SLajz</string>
    <string name="ShotSpecification_string_hook">Hook</string>
    <string name="ShotSpecification_string_topla">Topla</string>
    <string name="ShotSpecification_string_fat">Tlustá</string>
    <string name="ShotSpecification_string_spike">Spike</string>
    <string name="ShotSpecification_string_heel">Patou</string>
    <string name="ShotSpecification_string_save">Záchraná</string>
    <string name="BallPosition_string_ok">Ok</string>
    <string name="BallPosition_string_dropFree">Drop volný</string>
    <string name="BallPosition_string_dropPenalty">Drop s trestnou</string>
    <string name="BallPosition_string_newPenalty">Nová s trestnou</string>
    <string name="BallPosition_string_lostBall">Ztracený míč</string>
    <string name="SelectClub_string_title">Výběr hole</string>
    <string name="SelectSpecification_string_title">Výběr specifikace</string>
    <string name="SelectBallPosition_string_title">Výběr pozice míče</string>
    <string name="SelectFromAreaType_string_title">Výběr plochy místa odpalu</string>
    <string name="SelectToAreaType_string_title">Výběr typu plochy dopadu</string>
    <string name="GameOnHoleMenu_string_saveShot">Ulož ránu</string>
    <string name="GameOnHoleMenu_string_changeFrom">Změna bodu odpalu</string>
    <string name="GameOnHoleMenu_string_changeTo">Zmena bodu dopadu</string>
    <string name="GameOnHoleMenu_string_exitCaptureShot">Opustit zadávání rány</string>
    <string name="ShotCaptureDraw_string_puts">P</string>
    <string name="CurrentScore_string_title">Průběžné skóre</string>
    <string name="CurrentScore_string_holesPlayed">Zaznamenáno jamek</string>
    <string name="CurrentScore_string_player">Hráč</string>
    <string name="CurrentScore_string_shotsCountPar">Počet ran / +- par</string>
    <string name="CurrentScore_string_stableford">Stableford body</string>
    <string name="CurrentScore_string_eagleBirdiePar">Eagle / Birdie / Par</string>
    <string name="CurrentScore_string_boogieOther">Boogie / 2 Boogie / Jiný</string>
    <string name="ScoreCard_string_title">Skóre karta</string>
    <string name="ScoreCard_string_hole">Jamka</string>
    <string name="ScoreCard_string_par">Par</string>
    <string name="ScoreCard_string_hcp">HCP</string>
    <string name="ScoreCard_string_osPar">Os. Par</string>
    <string name="ScoreCard_string_score">Skóre</string>
    <string name="ScoreCard_string_stable">Stableford</string>
    <string name="GameOnHoleMenu_string_scoreCard">Skóre karta</string>
    <string name="GameOnHoleMenu_string_saveGame">Vyhodnocení hry</string>
    <string name="ScoreCardMenu_string_about">Legenda</string>
    <string name="DisplayScoreCardAbout_string_title">Legenda</string>
    <string name="DisplayScoreCardAbout_string_holeInOne">Hole in one</string>
    <string name="DisplayScoreCardAbout_string_albatros">Albatros</string>
    <string name="DisplayScoreCardAbout_string_eagle">Eagle</string>
    <string name="DisplayScoreCardAbout_string_birdie">Birdie</string>
    <string name="DisplayScoreCardAbout_string_par">Par</string>
    <string name="DisplayScoreCardAbout_string_bogey">Bogey</string>
    <string name="DisplayScoreCardAbout_string_doubleBogie">Double bogey</string>
    <string name="DisplayScoreCardAbout_string_tripleBogey">Triple bogey</string>
    <string name="DisplayScoreCardAbout_string_doubleBogey">Double bogey</string>
    <string name="DisplayScoreCardAbout_string_other">Ostatní</string>
    <string name="ScoreCard_string_summary">sum</string>
    <string name="Settings_string_userProfile">Uživatelský profil</string>
</resources>