<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenu"
    android:orientation="vertical"
    android:id="@+id/mainMenu_linearLayout_mainLayout">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainMenu_string_newGame"
        android:id="@+id/MainMenu_button_newGame" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainMenu_string_savedGames"
        android:id="@+id/MainMenu_button_savedGames" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainMenu_string_statistics"
        android:id="@+id/MainMenu_button_statistics" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MainMenu_string_settings"
        android:id="@+id/MainMenu_button_settings" />

</LinearLayout>
